ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-ingress
  namespace: my-project
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: pingpong-service
                port:
                  number: 5000
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: log-output-service
                port:
                  number: 5000
